<resources>
    <string name="app_name">Outdoor Plus</string>
    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="day">Day</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="degrees_text">0</string>
    <string name="weather_item">Weather</string>
    <string name="step_counter_item">Step Counter</string>
    <string name="compass_item">Compass</string>
    <string name="about_item">About</string>
    <string name="search_item">Search</string>
    <string name="location_setting_item">Location Setting</string>
    <string name="start_button_text">Start</string>
    <string name="result_button_text">Show result</string>
    <string name="height_hint">Enter your height (cm)</string>
    <string name="speed">Speed:</string>
    <string name="steps2sec">Steps in 2 second:</string>
    <string name="Steps">Steps:</string>
    <string name="distance">Distance:</string>

</resources>
