<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/searchItem"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_item"
        android:visible="false"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/locationItem"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/weatherItem"
        android:title="@string/weather_item" />
    <item
        android:id="@+id/locationListItem"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/location_setting_item"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/stepCounterItem"
        android:title="@string/step_counter_item" />
    <item
        android:id="@+id/compassItem"
        android:title="@string/compass_item" />
    <item
        android:id="@+id/aboutItem"
        android:title="@string/about_item" />

</menu>