<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp90018.project2.weather.WeatherActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <include
        android:id="@+id/weather_toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/weather_toolbar"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background_1" />

    <RelativeLayout
        android:id="@+id/up_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/weather_toolbar">

        <LinearLayout
            android:id="@+id/locationAndimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="96dp"
            android:layout_marginRight="96dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/weatherIconImageView"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_na" />

            <TextView
                android:id="@+id/conditionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/condition"
                android:textAlignment="center"
                android:textColor="@color/light_font"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/locationAndimage"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="@color/light_font"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/locationTextView"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/temperature"
            android:textAlignment="center"
            android:textColor="@color/light_font"
            android:textSize="64sp" />

    </RelativeLayout>

    <View
        android:id="@+id/zero_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/up_layout"
        android:background="#30FFFFFF" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/zero_line"
        android:background="@drawable/shape">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/forecast_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <fragment
                    android:id="@+id/forecastDay1"
                    android:name="comp90018.project2.weather.fragments.ForecastFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_weather_condition" />

                <fragment
                    android:id="@+id/forecastDay2"
                    android:name="comp90018.project2.weather.fragments.ForecastFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_weather_condition" />

                <fragment
                    android:id="@+id/forecastDay3"
                    android:name="comp90018.project2.weather.fragments.ForecastFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_weather_condition" />

                <fragment
                    android:id="@+id/forecastDay4"
                    android:name="comp90018.project2.weather.fragments.ForecastFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_weather_condition" />

                <fragment
                    android:id="@+id/forecastDay5"
                    android:name="comp90018.project2.weather.fragments.ForecastFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_weather_condition" />
            </LinearLayout>

            <View
                android:id="@+id/first_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/forecast_layout"
                android:background="#30FFFFFF" />

            <RelativeLayout
                android:id="@+id/weatherDescriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_line">


                <TextView
                    android:id="@+id/weatherDescriptionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text=""
                    android:textColor="@color/light_font"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View
                android:id="@+id/second_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/weatherDescriptionLayout"
                android:background="#30FFFFFF" />

            <RelativeLayout
                android:id="@+id/weatherWarningLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/second_line"
                android:visibility="gone">

                <TextView
                    android:id="@+id/weatherWarningTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text=""
                    android:textColor="@color/light_font"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <View
        android:id="@+id/third_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/scrollView2"
        android:background="#30FFFFFF" />

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/third_line"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:background="@drawable/yahoo_back">-->

        <ImageView
            android:id="@+id/yahooLogoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/yahoo_back"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/yahoo_logo" />
    <!--</RelativeLayout>-->


</RelativeLayout>

